--- a/src/app/demo/components/pages/timeline/timelinedemo.component.html
+++ b/src/app/demo/components/pages/timeline/timelinedemo.component.html
@@ -7,11 +7,11 @@
         <div class="p-fluid p-formgrid grid">
             <div class="field col-12 md:col-4">
                 <label htmlFor="ticket">Ticket</label>
-                <input pInputText id="ticket" type="text" maxlength="12"/>
+                <input pInputText id="ticket" type="text" maxlength="12" #ticket/>
             </div>
             <div class="field col-12 md:col-2">
                 <label htmlFor="search">&nbsp;</label>
-                <p-button label="Search" icon="pi pi-search" styleClass="p-button-warning" (onClick)="search()"></p-button>
+                <p-button label="Search" icon="pi pi-search" styleClass="p-button-warning" (onClick)="search(ticket.value)"></p-button>
             </div>
 
         </div>
@@ -21,14 +21,19 @@
     </div>
     <p-timeline [value]="events1" align="alternate" styleClass="customized-timeline">
         <ng-template pTemplate="marker" let-event>
-        <span class="flex z-1 w-2rem h-2rem align-items-center justify-content-center text-white border-circle shadow-2" [style.backgroundColor]="event.color">
-            <i [ngClass]="event.icon"></i>
+        <span class="flex z-1 w-2rem h-2rem align-items-center justify-content-center text-white border-circle shadow-2" [style.backgroundColor]="event.from.color">
+            <i [ngClass]="event.from.icon"></i>
         </span>
         </ng-template>
         <ng-template pTemplate="content" let-event>
-            <p-card [header]="event.status" [subheader]="event.date">
-                <p class="line-height-3 my-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
-                    quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
+            <p-card [header]="'Origin: '+ event.from.application" [subheader]="'Destiny: '+event.to.application">
+                <p class="line-height-3 my-3">
+                    Status: {{event.status}}
+                    <br>
+                    Create Date: {{event.dateCreate}}
+                    <br>
+                    Obs: {{event.obs}}
+                </p>
             </p-card>
         </ng-template>
     </p-timeline>
